--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -143,9 +143,8 @@
 
         <div class="block-carousel-about animated bounceInDown">
             <div class="tel">
-                <p><i class="fa fa-phone-square" aria-hidden="true"></i>Номера телефонов:</p>
+                <p><i class="fa fa-phone-square" aria-hidden="true"></i>Номер телефона:</p>
                 <p class="a1"><img src="{% static "images/a1.jpg" %}">+375 29 630 64 94</p>
-                <p><img src="{% static "images/mts.png" %}">+375 33 630 64 94</p>
             </div>
             <div class="work">
                 <p><i class="fa fa-clock-o" aria-hidden="true"></i>Время работы:</p>
@@ -224,7 +223,7 @@
                             <span class="animated infinite pulse">Телевизоры</span></a>
                     </div>
                     <div class="any-winner3">
-                        <a href="{{ categories.2.slug }}"><img src="{% static "images/nout2.jpg" %}" alt="">
+                        <a class="pulse" href="{{ categories.2.slug }}"><img src="{% static "images/nout2.jpg" %}" alt="">
                             <span class="animated infinite pulse">Ноутбуки</span></a>
                     </div>
                 </div>
