--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,7 @@ body {
     font-family: Verdana, sans-serif !important;
 }
 
+
 .background {
     background-color: #d4d4d5;
     background-attachment: fixed;
@@ -85,6 +86,7 @@ body {
 }
 
 .block-carousel-about {
+    font-size: 1vw;
     width: 94%;
     margin-bottom: 1%;
     margin-left: auto;
@@ -109,6 +111,7 @@ body {
 }
 
 .block-carousel-mini {
+    font-size: 1vw;
     width: 30%;
     margin: 2% auto 0 auto;
     background-color: white;
@@ -166,7 +169,7 @@ body {
 
 .a1 img {
     height: auto;
-    width: 35px;
+    width: 15%;
 }
 
 .a1 {
@@ -174,15 +177,18 @@ body {
 }
 
 .tel {
+    width: 34%;
     text-align: center;
     padding-top: 15px;
 }
 
 .work {
+    width: 33%;
     text-align: center;
 }
 
 .address {
+    width: 33%;
     text-align: center;
 }
 
@@ -199,6 +205,7 @@ body {
 }
 
 .dropdown-item {
+    font-size: 0.9vw;
     outline: none !important;
 }
 
@@ -207,7 +214,7 @@ body {
 }
 
 ul.menu {
-    font-size: 100%;
+    font-size: 0.9vw;
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -365,6 +372,7 @@ a .brand {
 }
 
 .block-carousel-cat {
+    font-size: 0.9vw;
     max-width: 30%;
     margin-bottom: 1%;
     margin-left: auto;
@@ -543,6 +551,7 @@ a .brand {
 /*product*/
 
 .block-carousel-prod-det {
+    font-size: 0.9vw;
     width: 94%;
     margin-bottom: 1%;
     margin-left: auto;
@@ -727,5 +736,13 @@ td {
 
 .context {
     min-height: 600px;
+}
+
+.pulse span{
+    font-size: 0.9vw;
+}
+
+.card-footer h2{
+    font-size: 0.9vw;
 }
 
